# Ponent

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
example/: basics.ps  comptime.ps  contracts.ps  enums.ps  example.ps  generics.ps  structs.ps
src/: ast.rs  cli.rs  diagnostics.rs  lexer.rs  main.rs  parser.rs  symbol.rs
src/ast/: mod.rs  visit.rs
src/diagnostics/: chain.rs  collector.rs  error_code.rs  explain_server.rs  glyph.rs  i18n.rs  kind.rs  label.rs  level.rs  mod.rs
src/diagnostics/emitter/: colored.rs  html.rs  json.rs  mod.rs  plain.rs  stylesheet.rs
src/hir/: anya.rs  builtins.rs  checker.rs  comptime.rs  generate.rs  guard_set.rs  hir.rs  infer.rs  infer_tests.rs  mod.rs  region_tree.rs  resolver.rs  shape_var.rs  smt.rs  symbol.rs  symbol_table.rs  traits.rs  types.rs  visit.rs
src/hir/checker/: autoderef.rs  context.rs  contract.rs  fn_ctxt.rs  helpers.rs  mod.rs  region.rs  tests.rs  types.rs
src/hir/comptime/: error.rs  eval.rs  mod.rs  tests.rs  value.rs
src/hir/infer/: defaulting.rs
src/hir/query/: dep_graph.rs  job.rs  mod.rs
src/hir/traits/: mod.rs
src/hir/traits/solver/: builtins.rs  coherence.rs  delegate.rs  eval.rs  forest.rs  fulfill.rs  inspect.rs  mod.rs  obligation.rs  project.rs  search_graph.rs  select.rs  test.rs
src/hir/traits/solver/assembly/: mod.rs
src/hir/traits/solver/eval_ctxt/: mod.rs  probe.rs
src/vfs/: mod.rs
