[package]
name = "ponent"
version = "0.0.0"
edition = "2024"

[features]
default = []
omniml_pool = []

[package.metadata.cargo-machete]
ignored = ["z3"]

[dependencies]
bitflags = "2.13.0"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.14.0"
logos = "0.16.1"
miette = { version = "7.6.0", features = ["fancy"] }
mimalloc = "0.1.52"
rayon = "1.10.0"
rustc-hash = "2.1.2"
z3 = { version = "0.20.2", features = ["vendored"] }
