[package]
name = "ponent"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
omniml_pool = []

[package.metadata.cargo-machete]
ignored = ["z3"]

[dependencies]
textwrap = "0.16"
bitflags = "2.13.0"
clap = { version = "4.6.1", features = ["derive"] }
indexmap = "2.14.0"
logos = "0.16.1"
mimalloc = "0.1.52"
rayon = "1.10.0"
regex-syntax = "0.8"
rustc-hash = "2.1.2"
z3 = { version = "0.20.2", features = ["vendored"] }
